--- a/views/index.html
+++ b/views/index.html
@@ -121,15 +121,22 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.3/socket.io.js"></script>
         <script>
             const socket = io();
+            let thread;
 
             socket.on('assistantResponse', (message) => {
                 appendMessage('NUria', message);
             });
 
+            socket.on('newThreadCreated', (newThread) => {
+                //appendMessage('NUria', message);
+                thread = newThread;
+                console.log(thread);
+            });
+
             function sendMessage() {
                 const userInput = document.getElementById('user-input').value;
                 appendMessage('You', userInput);
-                socket.emit('askAssistant', userInput);
+                socket.emit('askAssistant', userInput, thread);
                 document.getElementById('user-input').value = ''; // Clear the input field
                 return false; // Prevent form submission
             }
@@ -145,10 +152,13 @@
 
             // Functions for opening and closing the chat form
             function openForm() {
+                console.log('openForm');
+                socket.emit('createNewThread');
                 document.getElementById('myForm').style.display = 'block';
             }
 
             function closeForm() {
+                console.log('clear');
                 document.getElementById('myForm').style.display = 'none';
             }
         </script>
