chore: final version (at the moment)

--- a/views/index.html
+++ b/views/index.html
@@ -24,7 +24,7 @@
         <div id="dialogue-container">
             <div class="chat">
                 <div class="chat-title">
-                    <h1>AskNuria</h1>
+                    <h1>KAZGUU Library chatbot</h1>
                     <h2>Library Assistant</h2>
                     <figure class="avatar">
                         <img src="" />
@@ -180,7 +180,7 @@
         ).appendTo($('.mCSB_container'));
         updateScrollbar();
         if (counter === 0) {
-            message = 'Hello I am AskNuria, How can I help you?';
+            message = 'Hello I am KAZGUU Library chatbot, How can I help you?';
         }
         if (message !== undefined) {
             $('.message.loading').remove();
